--- a/login/templates/user_homepage.html
+++ b/login/templates/user_homepage.html
@@ -5,7 +5,8 @@
   <title>User Home</title>
 </head>
 <body>
-	<h1> Welcome {{username}} </h1>
+  <h1> Welcome {{username}} </h1>
+  <p1> Balance: {{account_balance}}</p1>
 	<a href="/user_home/logout/"> LOGOUT </a>
 </body>
 </html>
