--- a/user_home/templates/user_homepage.html
+++ b/user_home/templates/user_homepage.html
@@ -5,7 +5,8 @@
   <title>User Home</title>
 </head>
 <body>
-	<h1> Welcome {{username}} </h1>
+  <h1> Welcome {{username}} </h1>
+  <a href="/user_home/appointment/"> Make Appointment </a>
 	<a href="/user_home/logout/"> LOGOUT </a>
 </body>
 </html>
