--- a/user_home/templates/user_homepage.html
+++ b/user_home/templates/user_homepage.html
@@ -7,6 +7,8 @@
 <body>
   <h1> Welcome {{username}} </h1>
   <a href="/user_home/appointment/"> Make Appointment </a>
+  <a href="/user_home/profile_update/"> Update Profile </a>
+  <a href="/user_home/new_account/"> Add New Account </a>
 	<a href="/user_home/logout/"> LOGOUT </a>
 </body>
 </html>
