--- a/transactions/templates/deposit.html
+++ b/transactions/templates/deposit.html
@@ -8,7 +8,12 @@
       <form action='/deposit' method="post" onsubmit="return validateDeposit()">
                   {% csrf_token %}
           <label for="depositAccount">To Account:</label>
-          <input type="number" id="depositAccount" class="form-control" name="depositAccount"><br><br>
+          <select id="depositAccount" class="form-control" name="depositAccount">
+              {% for number, type in accounts %}
+                  <option value="{% number %}">{% type %}</option>
+              {% endfor %}
+          </select>
+          <br><br>
           <label for="depositAmount">Amount:</label>
           <input type="number" id="depositAmount" step="0.01" class="form-control" name="depositAmount" min="0.01"><br><br>
           <input type="submit" value="Submit" class="btn btn-primary float-right app-submit">
@@ -19,8 +24,18 @@
     function validateDeposit() {
         let accountNumber = document.getElementById("depositAccount").value;
         let amount = document.getElementById("depositAmount").value;
-        
+        let accounts = "{{accounts}}";
+
         // Checks on account number
+        if (accountNumber === null || accountNumber === undefined || accountNumber === "") {
+            alert("Please select an account.");
+            return false;
+        }
+
+        if (!accounts.filter("number").includes(accountNumber)) {
+            alert("Please select an existing account.");
+            return false;
+        }
 
         if (amount < 0.01) {
             alert("Please enter an amount value of at least 0.01.");
