--- a/transactions/templates/success.html
+++ b/transactions/templates/success.html
@@ -5,7 +5,7 @@
         <title>Success</title>
     </head>
     <body>
-        <h3>The transaction succeeded. You will be redirected to the homepage in 3 seconds.</h3>
+        <h3>The request for the transaction succeeded. You will be redirected to the homepage in 3 seconds.</h3>
         <script>
             setTimeout(() => {
                 window.location.href = "/";
