otp in transactions

--- a/transactions/templates/deposit.html
+++ b/transactions/templates/deposit.html
@@ -16,6 +16,8 @@
             <label for="amount">Amount:</label>
             <input type="number" id="amount" step="0.01" class="form-control" name="amount" min="0.01"><br><br>
             <input type="submit" value="Submit" class="btn btn-primary float-right app-submit">
+            <label>OTP:</label>
+            <input type="number" id="otp" step="0.01" class="form-control" name="otp"><br><br>
         </form>
     </div>
 </div>
