--- a/user_home/templates/user_homepage.html
+++ b/user_home/templates/user_homepage.html
@@ -47,6 +47,8 @@
                         <li class="list-group-item list-group-item-light menu" id="Withdraw">
                             <a href="/user_home/withdraw/">Withdraw</a> </li>
                         <li class="list-group-item list-group-item-light menu" id="GetStatement">
+                            <a href="/user_home/fundTransfer/">Transfer Funds</a> </li>
+                        <li class="list-group-item list-group-item-light menu" id="GetStatement">
                             <a href="/user_home/getStatement/">Download Statement</a> </li>
                     </ul>
                 </div>
