--- a/transactions/templates/withdraw.html
+++ b/transactions/templates/withdraw.html
@@ -15,6 +15,8 @@
             <br><br>
             <label for="amount">Amount:</label>
             <input type="number" id="amount" step="0.01" class="form-control" name="amount" min="0.01"><br><br>
+            <label>OTP:</label>
+            <input type="number" id="otp" step="0.01" class="form-control" name="otp"><br><br>
             <input type="submit" value="Submit" class="btn btn-primary float-right app-submit">
         </form>
     </div>
