--- a/transactions/templates/pendingTransactions.html
+++ b/transactions/templates/pendingTransactions.html
@@ -1,4 +1,4 @@
-{% extends "customer_homepage.html" %} {% block javascript %}
+{% extends basehtml %} {% block javascript %}
 <script>
     function updateTransaction(transactionId, status) {
         var ele = event.srcElement;
